# react-native-cryptopp

./: .gitignore  oneoffice-cleanups.sh  package.json  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
cpp/: JSIHelper.cpp  JSIHelper.h  ThreadPool.cpp  aes-candidates.hpp  aes.cpp  aes.h  hash-functions-ho.cpp  hash-functions-ho.h  hash-functions.cpp  hash-functions.h  helpers.cpp  helpers.h  insecure.cpp  insecure.h  key-derivation.cpp  key-derivation.h  message-authentication.cpp  message-authentication.h  public-key.cpp  public-key.h  react-native-cryptopp.cpp  react-native-cryptopp.h  symmetric.cpp  symmetric.h  utils.cpp  utils.h
cryptopp/TestScripts/: setenv-android.sh
ed25519/: ed25519.h  ed_add_scalar.c  ed_add_scalar.h  ed_fe.c  ed_fe.h  ed_ge.c  ed_ge.h  ed_key_exchange.c  ed_key_exchange.h  ed_keypair.c  ed_keypair.h  ed_precomp_data.h  ed_sc.c  ed_sc.h  ed_seed.c  ed_seed.h  ed_sha512.c  ed_sha512.h  ed_sign.c  ed_sign.h  ed_verify.c  ed_verify.h  key_exchange.c  key_exchange.h  keypair.c  keypair.h  seed.c  sign.c  sign.h  verify.c  verify.h
scripts/: compile_cryptopp.js  compile_cryptopp_android.sh  compile_cryptopp_ios.sh  copy_external_libs.sh  download_cryptopp.js
src/: constants.ts  index.tsx
